--- a/QrCodeGenerator/QrCodeGenerator/Properties/Resources.resx
+++ b/QrCodeGenerator/QrCodeGenerator/Properties/Resources.resx
@@ -157,4 +157,12 @@
     <value>Combobox's selected index is out of range.</value>
     <comment>Error when Combobox's selected index is not within TabFormViewModel's array's index limit.</comment>
   </data>
+  <data name="Error_MissingPsk" xml:space="preserve">
+    <value>PSK is missing</value>
+    <comment>Error message for when a PSK field is required but it's empty.</comment>
+  </data>
+  <data name="Error_MissingSsid" xml:space="preserve">
+    <value>SSID is missing</value>
+    <comment>Error message for when a SSID field is required but it's empty.</comment>
+  </data>
 </root>
